--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>anchor tags</title>
+  </head>
+  <body>
+    <a href=""></a>
+  </body>
+</html>
