Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>anchor tags</title>
   </head>
   <body>
-    <a href="https://flatironschool.com">the text between the <a> tag and the </a> tag</a>
+    <a href="https://flatironschool.com">Flatiron School</a>
   </body>
 </html>
